# aurelius-copilot

./: .gitignore  LICENSE  README.md  aurelius_project_tree.txt  dashboard.py  pyproject.toml
aurelius_copilot/: .gitignore  inspect_chroma_metadata.py  kpi_normalizer.py
aurelius_copilot/agents/: agents.py  orchestrator.py
aurelius_copilot/api/: routes.py  server.py
aurelius_copilot/frontend/: app.py
aurelius_copilot/pipelines/: build_bm25_index.py  build_vector_store.py  extract_kpis.py  run_rag_query.py
aurelius_copilot/retrieval/: hybrid.py
aurelius_copilot/tests/: test_kpi_normalizer.py  test_retrieval.py
aurelius_copilot/tools/: hybrid_retrieval_tool.py
